# rasa_chatbot_cn

./: .gitignore  Makefile  README.md  actions.py  bot.py  config.yml  config_embedding_bilstm.yml  embed_policy.yml  failed_stories.md  mobile_domain.yml  nlu_embedding_config.yml  policy.py  pyproject.toml  requirements.txt  stories.md
comparison_models/: num_stories.json
comparison_models/run_1/AttentionPolicy1/: policy_metadata.json
comparison_models/run_1/AttentionPolicy2/: policy_metadata.json
comparison_models/run_1/AttentionPolicy3/: policy_metadata.json
comparison_models/run_1/AttentionPolicy4/: policy_metadata.json
comparison_models/run_1/EmbeddingPolicy1/: policy_metadata.json
comparison_models/run_1/EmbeddingPolicy2/: policy_metadata.json
comparison_models/run_1/EmbeddingPolicy3/: domain.yml  policy_metadata.json
comparison_models/run_1/EmbeddingPolicy4/: policy_metadata.json
comparison_results/: results.json
components/extractors/: jieba_pseg_extractor.py
configs/: config_embedding_bilstm.yml  endpoints.yml  nlu_embedding_config.yml
data/: guide_story.md  mobile_edit_story.md  mobile_nlu_data.json  mobile_raw_data.txt  mobile_story.md  rasa_dataset_training.json  template.txt
dev/: Dockerfile.dev
models/dialogue/: domain.json  domain.yml  policy_metadata.json
models/dialogue_embed/: domain.yml  policy_metadata.json
models/dialogue_keras/: domain.json  policy_metadata.json
models/dialogue_transformer/: policy_metadata.json
policy/: attention_keras.py  attention_policy.py  attention_policy.yml  embed_policy.yml  keras_policy.yml  mobile_policy.py
tests/: conftest.py  test_setup_validation.py
tests/integration/: __init__.py
utils/: merge_story.py  re_story.py
(+128 files in other folders)
